modified case insensitive names
