# controller/go/model_get_tenantcluster.go
@@ -4,14 +4,14 @@
  * APIs to act on Nextensio Controller
  *
  * API version: 1.0.0
- * Contact: development@nextensio.com
+ * Contact: developer@nextensio.com
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
 package swagger
 
-type Tenantcluster struct {
+type GetTenantcluster struct {
 	Result string `json:"Result"`
-	Id string `json:"_id"`
+	Id string `json:"id"`
 	Image string `json:"image"`
 	Apodrepl int32 `json:"apodrepl"`
 	Apodsets int32 `json:"apodsets"`
